; ModuleID = '/home/carl/AnghaBench/git/extr_tempfile.c_get_tempfile_fd.c'
source_filename = "/home/carl/AnghaBench/git/extr_tempfile.c_get_tempfile_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tempfile = type { i32 }

@.str = private unnamed_addr constant [45 x i8] c"get_tempfile_fd() called for inactive object\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_tempfile_fd(%struct.tempfile* %0) #0 {
  %2 = alloca %struct.tempfile*, align 8
  store %struct.tempfile* %0, %struct.tempfile** %2, align 8
  %3 = load %struct.tempfile*, %struct.tempfile** %2, align 8
  %4 = call i32 @is_tempfile_active(%struct.tempfile* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = call i32 @BUG(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %1
  %9 = load %struct.tempfile*, %struct.tempfile** %2, align 8
  %10 = getelementptr inbounds %struct.tempfile, %struct.tempfile* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local i32 @is_tempfile_active(%struct.tempfile*) #1

declare dso_local i32 @BUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
